Use InetAddress.getLoopbackAddress() instead of https://localhost: